--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,63 @@
-<h1 class="display-1 text-white text-center font-weight-bold" style="text-shadow: 0 0 10px rgba(0,0,0,0.5)">Hobby site(仮)</h1>
+<div id="title">
+  <h1>Hobby site(仮)</h1>
+</div>
 <h2 class="text-center" style="color: #ccc">建造中</h2>
+<body>
+<div id="nav">
+  <ul>
+    <li><a href="#">プラモデル</a></li>
+    <li><a href="#">トイ</a></li>
+    <li><a href="#">カーモデル</a></li>
+    <li><a href="#">モデルガン</a></li>
+    <li><a href="#">その他</a></li>
+  </ul>
+</div>
+<div id="container">
+    <div id="main">
+        <div class="post">
+            <p>ここは文章が入ります。ここは文章が入ります。ここは文章が入ります。<br />今は、適当な文章を入れてあります。これをダミーテキストといいます。</p>
+        </div>
+        <div class="post clearfix">
+            <h2>小見出し1</h2>
+            <img class="left" src="#" alt="画像1" />
+            <p>
+                コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
+                コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
+            </p>
+            <p><a href="#">→コンテンツ1のページへ</a></p>
+        </div>
+        <div class="post clearfix">
+            <h2>小見出し2</h2>
+            <img class="left" src="#" alt="画像2" />
+            <p>
+                コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
+                コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
+            </p>
+        </div>
+    </div>
+    <div id="side">
+    <div class="box">
+        <h2>サイドメニュー1</h2>
+        <div class="boxBody">
+            <ul>
+                <li>項目1</li>
+                <li>項目2</li>
+                <li>項目3</li>
+                <li>項目4</li>
+            </ul>
+        </div>
+    </div>
+    <div class="box">
+            <h2>サイドメニュー2</h2>
+            <div class="boxBody">
+                <ul>
+                    <li>項目1</li>
+                    <li>項目2</li>
+                    <li>項目3</li>
+                    <li>項目4</li>
+                </ul>
+            </div>
+    </div>
+</div>
+</div>
+</body>
