create category pages

--- a/app/views/home/plamo.html.erb
+++ b/app/views/home/plamo.html.erb
@@ -1,7 +1,7 @@
 <div id="title">
   <h1>Hobby site(仮)</h1>
 </div>
-<h2 class="text-center" style="color: #000">トップページ</h2>
+<h2 class="text-center" style="color: #000">プラモデル</h2>
 <body>
 <div id="nav">
   <ul>
