--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -14,10 +14,10 @@
 
   <div class="form-group">
     <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control col-md-5 col-sm", placeholder: "Password confirmation" %>
   </div>
 
-  <div class="actions">
+  <div class="actions pb-5">
     <%= f.submit "Change my password" %>
   </div>
 <% end %>
