--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<header class="navbar bg-light navbar-light">
   <%= link_to 'Hobby Site', root_path, class: "navbar-brand" %>
   <button
     class="navbar-toggler"
