--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div id="side">
     <div class="box">
-        <h2>サイドメニュー1</h2>
+        <h2><%= @user.name %></h2>
         <div class="boxBody">
             <ul>
                 <li>項目1</li>
