--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,6 +31,11 @@
     <%= f.password_field :current_password, autocomplete: "off", class: "form-control col-md-5 col-sm", placeholder: "Current password" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, class: "form-control col-md-5 col-sm", placeholder: "Username" %>
+  </div>
+
   <div class="actions pb-5">
     <%= f.submit "Update" %>
   </div>
