--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control col-md-5 col-sm", placeholder: "Password confirmation" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, class: "form-control col-md-5 col-sm", placeholder: "Username" %>
+  </div>
+
   <div class="actions pb-5">
     <%= f.submit "Sign up", class: "btn btn-primary" %>
   </div>
