--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -1,12 +1,12 @@
 <div id="side">
     <div class="box">
-        <h2>ユーザー</h2>
+        <h2><%= @user.name %></h2>
         <div class="boxBody">
             <ul>
                 <li>項目1</li>
                 <li>項目2</li>
-                <li>項目3</li>
-                <li><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+                <li><%= link_to "登録情報編集", edit_user_registration_path, class: "nav-link" %></li>
+                <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
             </ul>
         </div>
     </div>
