--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,10 @@
       <%  if user_signed_in?  %>
        <li class="nav-item">
          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+
+       </li>
+       <li class="nav-item">
+         <%= link_to "Edit", edit_user_registration_path, class: "nav-link" %>
        </li>
        <% else %>
        <li class="nav-item">
