--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,11 +17,10 @@
             <p><a href="#">→コンテンツ1のページへ</a></p>
         </div>
         <div class="post clearfix">
-            <h2>小見出し2</h2>
-            <img class="left" src="#" alt="画像2" />
+            <h2>コメント</h2>
+
             <p>
-                コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
-                コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
+                <a href="posts/new">投稿</a>
             </p>
         </div>
     </div>
