--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,8 +8,7 @@
             <p>ここは文章が入ります。ここは文章が入ります。ここは文章が入ります。<br />今は、適当な文章を入れてあります。これをダミーテキストといいます。</p>
         </div>
         <div class="post clearfix">
-            <h2>小見出し1</h2>
-            <img class="left" src="#" alt="画像1" />
+            <h2>アイテム</h2>
             <p>
                 コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
                 コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
@@ -18,7 +17,6 @@
         </div>
         <div class="post clearfix">
             <h2>コメント</h2>
-
             <p>
                 <a href="posts/new">投稿</a>
             </p>
