--- a/app/views/home/plamo.html.erb
+++ b/app/views/home/plamo.html.erb
@@ -8,11 +8,11 @@
             <p>ここは文章が入ります。ここは文章が入ります。ここは文章が入ります。<br />今は、適当な文章を入れてあります。これをダミーテキストといいます。</p>
         </div>
         <div class="post clearfix">
-            <h2>小見出し1</h2>
-            <img class="left" src="#" alt="画像1" />
+            <h2>製品一覧</h2>
             <p>
-                コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
-                コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
+                <% @items.each do |item| %>
+        <%= item.name %><br>
+    <% end %>
             </p>
             <p><a href="#">→コンテンツ1のページへ</a></p>
         </div>
