--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,15 +5,13 @@
 <div id="container">
     <div id="main">
         <div class="post">
-            <p>ここは文章が入ります。ここは文章が入ります。ここは文章が入ります。<br />今は、適当な文章を入れてあります。これをダミーテキストといいます。</p>
+            <p>トップページになります</p>
         </div>
         <div class="post clearfix">
-            <h2>アイテム</h2>
+            <h2>新着商品</h2>
             <p>
-                コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
-                コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
+                工事中
             </p>
-            <p><a href="#">→コンテンツ1のページへ</a></p>
         </div>
         <div class="post clearfix">
             <h2>コメント</h2>
