--- a/app/views/home/train_model.html.erb
+++ b/app/views/home/train_model.html.erb
@@ -8,20 +8,21 @@
             <p>ここは文章が入ります。ここは文章が入ります。ここは文章が入ります。<br />今は、適当な文章を入れてあります。これをダミーテキストといいます。</p>
         </div>
         <div class="post clearfix">
-            <h2>小見出し1</h2>
-            <img class="left" src="#" alt="画像1" />
+             <h2>製品一覧</h2>
             <p>
-                コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
-                コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。コンテンツ1の本文になります。
+                <% @items.each do |item| %>
+        <%= item.product_name %><br>
+    <% end %>
             </p>
-            <p><a href="#">→コンテンツ1のページへ</a></p>
         </div>
         <div class="post clearfix">
-            <h2>小見出し2</h2>
-            <img class="left" src="#" alt="画像2" />
-            <p>
-                コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
-                コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
+             <h2>製品詳細</h2>
+            <p><% @items.each do |item| %>
+        <%= item.product_name %><br>
+        <%= item.content %><br>
+        <%= item.release_date %><br>
+        <%= item.price %>円<br>
+    <% end %>
             </p>
         </div>
     </div>
