--- a/app/views/home/train_model.html.erb
+++ b/app/views/home/train_model.html.erb
@@ -5,7 +5,7 @@
 <div id="container">
     <div id="main">
         <div class="post">
-            <p>ここは文章が入ります。ここは文章が入ります。ここは文章が入ります。<br />今は、適当な文章を入れてあります。これをダミーテキストといいます。</p>
+            <p>鉄道模型のみになります</p>
         </div>
         <div class="post clearfix">
              <h2>製品一覧</h2>
@@ -23,6 +23,12 @@
         <%= item.release_date %><br>
         <%= item.price %>円<br>
     <% end %>
+            </p>
+        </div>
+        <div class="post clearfix">
+            <h2>コメント</h2>
+            <p>
+                <a href="posts/new">投稿</a>
             </p>
         </div>
     </div>
