--- a/app/views/home/plamo.html.erb
+++ b/app/views/home/plamo.html.erb
@@ -5,7 +5,7 @@
 <div id="container">
     <div id="main">
         <div class="post">
-            <p>組立式のプラスティックモデルのみ</p>
+            <p>組立式のプラスティックモデルのみになります</p>
         </div>
         <div class="post clearfix">
             <h2>製品一覧</h2>
