edit home_controller and routes and details page

--- a/app/views/home/other.html.erb
+++ b/app/views/home/other.html.erb
@@ -11,8 +11,8 @@
              <h2>製品一覧</h2>
             <p>
                 <% @items.each do |item| %>
-        <%= item.product_name %><br>
-    <% end %>
+                    <%= link_to item.product_name, other_details_path(item) %><br>
+                <% end %>
             </p>
         </div>
 
