--- a/app/views/home/_category.html.erb
+++ b/app/views/home/_category.html.erb
@@ -1,9 +1,9 @@
 <div id="nav">
   <ul>
-    <li><a href="plamo.html">プラモデル</a></li>
-    <li><a href="toy.html">トイ</a></li>
-    <li><a href="train_model.html">鉄道模型</a></li>
-    <li><a href="model_gun.html">モデルガン</a></li>
-    <li><a href="other.html">その他</a></li>
+    <li><a href="/plamo.html">プラモデル</a></li>
+    <li><a href="/toy.html">トイ</a></li>
+    <li><a href="/train_model.html">鉄道模型</a></li>
+    <li><a href="/model_gun.html">モデルガン</a></li>
+    <li><a href="/other.html">その他</a></li>
   </ul>
 </div>
