--- a/app/views/home/plamo.html.erb
+++ b/app/views/home/plamo.html.erb
@@ -11,7 +11,7 @@
             <h2>製品一覧</h2>
             <p>
                 <% @items.each do |item| %>
-                    <%= item.product_name %><br>
+                    <%= link_to item.product_name, plamo_details_path(item) %><br>
                 <% end %>
             </p>
         </div>
