--- a/app/views/home/plamo_details.html.erb
+++ b/app/views/home/plamo_details.html.erb
@@ -18,7 +18,7 @@
         <div class="post clearfix">
             <h2>コメント</h2>
             <p>
-                <a href="posts/new">投稿</a>
+                <a href="posts">投稿</a>
             </p>
         </div>
     </div>
