--- a/app/views/home/plamo_details.html.erb
+++ b/app/views/home/plamo_details.html.erb
@@ -18,6 +18,10 @@
         <div class="post clearfix">
             <h2>コメント</h2>
             <p>
+                <% @posts.each do |post| %>
+                    <%= post.title %><br>
+                    <%= post.content %><br>
+                <% end %>
                 <%= render 'posts/form', post: @post %>
             </p>
         </div>
