--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -4,8 +4,8 @@
         <div class="boxBody">
             <ul>
                 <li>項目1</li>
-                <li>項目2</li>
                 <li><%= link_to "登録情報編集", edit_user_registration_path, class: "nav-link" %></li>
+                <li><%= link_to "お問い合わせ", new_contact_path, class: "nav-link" %></li>
                 <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
             </ul>
         </div>
