--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_with(model: Post.new, local: true) do |form| %>
-
+  <div class="field">
+    <%= form.hidden_field :item_id, id:nil, value: item_id %>
+  </div>
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title, id:nil %>
