fix footer of layouts

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,2 +1,3 @@
 <footer class="bg-light d-flex flex-column justify-content-end align-items-end">
-  <div class=
+  <div class="text-muted small px-3">Hobby Site by Ruby on Rails & Bootstrap 4</div>
+</footer>
