create comments_history page

--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -3,7 +3,7 @@
         <h2><%= @user.name %></h2>
         <div class="boxBody">
             <ul>
-                <li>項目1</li>
+                <li>コメント履歴</li>
                 <li><%= link_to "登録情報編集", edit_user_registration_path, class: "nav-link" %></li>
                 <li><%= link_to "お問い合わせ", new_contact_path, class: "nav-link" %></li>
                 <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
