--- a/app/views/home/comments_history.html.erb
+++ b/app/views/home/comments_history.html.erb
@@ -10,8 +10,8 @@
         <div class="post clearfix">
             <h2>投稿コメント一覧</h2>
             <p>
-                <% @items.each do |item| %>
-                    <%= link_to item.product_name, plamo_details_path(item) %><br>
+                <% @posts.each do |post| %>
+                    <%= link_to ,  %><br>
                 <% end %>
             </p>
         </div>
