edit contact but error

--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -5,7 +5,7 @@
             <ul>
                 <li>コメント履歴</li>
                 <li><%= link_to "登録情報編集", edit_user_registration_path, class: "nav-link" %></li>
-                <li><%= link_to "お問い合わせ", new_contact_path, class: "nav-link" %></li>
+                <li><a href="/contact.html">お問い合わせ</a></li>
                 <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
             </ul>
         </div>
