--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -9,7 +9,24 @@
         </div>
         <div class="post clearfix">
             <p>
-                <%= render "contacts/_form" %>
+                <div class="field">
+                    <%= form.label :name %>
+                    <%= form.text_field :name %>
+                  </div>
+
+                  <div class="field">
+                    <%= form.label :email %>
+                    <%= form.text_field :email %>
+                  </div>
+
+                  <div class="field">
+                    <%= form.label :content %>
+                    <%= form.text_area :content %>
+                  </div>
+
+                  <div class="actions">
+                    <%= form.submit %>
+                  </div>
             </p>
         </div>
 
